--- a/src/main/resources/controller/ComidaAgregar.fxml
+++ b/src/main/resources/controller/ComidaAgregar.fxml
@@ -15,8 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="622.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controller.ComidaAgregarController">
+<AnchorPane id="AnchorPane" fx:id="ap" prefHeight="500.0" prefWidth="622.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ComidaAgregarController">
    <children>
       <BorderPane layoutX="180.0" layoutY="14.0" prefHeight="431.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -100,7 +99,7 @@
                                           <Insets bottom="5.0" />
                                        </GridPane.margin>
                                     </JFXButton>
-                                    <JFXTextField fx:id="jtfund" labelFloat="true" promptText="ud." text="U" GridPane.columnIndex="2">
+                                    <JFXTextField fx:id="jtfund" labelFloat="true" promptText="ud." GridPane.columnIndex="2">
                                        <GridPane.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" />
                                        </GridPane.margin>
