--- a/src/main/resources/controller/ComidaModificar.fxml
+++ b/src/main/resources/controller/ComidaModificar.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="ap" prefHeight="500.0" prefWidth="622.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ComidaModificarController">
+<AnchorPane id="AnchorPane" fx:id="ap" prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ComidaModificarController">
    <children>
       <BorderPane layoutX="180.0" layoutY="14.0" prefHeight="431.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -25,8 +25,8 @@
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
-                  <RowConstraints maxHeight="234.0" minHeight="0.0" prefHeight="42.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="398.0" minHeight="10.0" prefHeight="376.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="550.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
                   <Label text="MODIFICAR RECETA">
@@ -36,12 +36,12 @@
                   </Label>
                   <GridPane gridLinesVisible="true" GridPane.rowIndex="1">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="140.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="60.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints maxHeight="189.0" minHeight="10.0" prefHeight="83.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="334.0" minHeight="10.0" prefHeight="311.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="430.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
                         <JFXTextArea fx:id="jtfpreparacion" labelFloat="true" promptText="Preparaciòn" GridPane.rowIndex="1">
@@ -51,10 +51,10 @@
                         </JFXTextArea>
                         <TableView fx:id="tableIngrediente" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <columns>
-                              <TableColumn fx:id="columnIngrediente" prefWidth="152.0" text="Ingrediente" />
+                              <TableColumn fx:id="columnIngrediente" prefWidth="162.0" text="Ingrediente" />
                               <TableColumn fx:id="columnCantidad" prefWidth="55.0" text="Cantidad" />
-                              <TableColumn fx:id="columnUnd" prefWidth="30.0" text="Und" />
-                              <TableColumn fx:id="columnEstado" prefWidth="60.0" />
+                              <TableColumn fx:id="columnUnd" prefWidth="35.0" text="Und" />
+                              <TableColumn fx:id="columnEstado" prefWidth="45.0" />
                            </columns>
                            <GridPane.margin>
                               <Insets bottom="15.0" left="5.0" right="5.0" top="5.0" />
@@ -76,10 +76,10 @@
                               </Label>
                               <GridPane GridPane.rowIndex="1">
                                  <columnConstraints>
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="137.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="55.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="62.0" />
-                                    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="46.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="175.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="50.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="35.0" />
+                                    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="35.0" />
                                  </columnConstraints>
                                  <rowConstraints>
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -123,8 +123,8 @@
                            <children>
                               <GridPane GridPane.rowIndex="1">
                                  <columnConstraints>
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="186.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="113.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="200.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="100.0" />
                                  </columnConstraints>
                                  <rowConstraints>
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
