--- a/src/main/resources/controllerPrecio/PrecioVer.fxml
+++ b/src/main/resources/controllerPrecio/PrecioVer.fxml
@@ -14,8 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="554.0" prefWidth="579.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controllerPrecio.PrecioVerController">
+<AnchorPane id="AnchorPane" prefHeight="556.0" prefWidth="579.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllerPrecio.PrecioVerController">
    <children>
       <BorderPane layoutX="221.0" layoutY="106.0" prefHeight="554.0" prefWidth="579.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -24,46 +23,57 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="273.0" minHeight="10.0" prefHeight="158.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="273.0" minHeight="10.0" prefHeight="113.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="308.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="273.0" minHeight="10.0" prefHeight="137.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="273.0" minHeight="10.0" prefHeight="86.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="299.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                  <TableView fx:id="TablePrecio" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                     <columns>
-                      <TableColumn prefWidth="150.0" text="Tipo" />
-                      <TableColumn prefWidth="275.0" text="Ingrediente" />
-                        <TableColumn prefWidth="75.0" text="Precio" />
-                        <TableColumn prefWidth="75.0" text="." />
+                      <TableColumn fx:id="columnTipo" prefWidth="100.0" text="Tipo" />
+                      <TableColumn fx:id="columnIngrediente" prefWidth="220.0" text="Ingrediente" />
+                        <TableColumn fx:id="columnPrecio" prefWidth="65.0" text="Precio" />
+                        <TableColumn fx:id="columnMarca" prefWidth="90.0" text="Marca" />
+                        <TableColumn fx:id="columnEstado" prefWidth="100.0" />
                     </columns>
                   </TableView>
-                  <GridPane>
+                  <GridPane style="-fx-background-color: #dfebe2; -fx-border-color: #000000;">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <JFXButton style="-fx-border-color: #000000; -fx-background-color: #ffffff;" text="Agregar" GridPane.columnIndex="3" />
-                        <JFXComboBox maxWidth="1.7976931348623157E308" promptText="Ingrediente">
-                           <padding>
+                        <JFXButton onAction="#agregarIngrediente" prefWidth="100.0" style="-fx-border-color: #000000; -fx-background-color: #ffffff;" text="Agregar" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <JFXTextField fx:id="jtfprecio" labelFloat="true" promptText="Precio" GridPane.columnIndex="1">
+                           <GridPane.margin>
                               <Insets left="5.0" right="5.0" />
-                           </padding>
-                        </JFXComboBox>
-                        <JFXTextField labelFloat="true" promptText="Precio" GridPane.columnIndex="1">
-                           <padding>
-                              <Insets left="5.0" right="5.0" />
-                           </padding>
+                           </GridPane.margin>
                         </JFXTextField>
-                        <JFXComboBox labelFloat="true" maxWidth="1.7976931348623157E308" promptText="Escala" GridPane.columnIndex="2">
-                           <padding>
-                              <Insets left="5.0" right="5.0" />
-                           </padding>
+                        <JFXComboBox fx:id="jcbEscala" labelFloat="true" maxWidth="1.7976931348623157E308" promptText="Escala" GridPane.columnIndex="2">
+                           <GridPane.margin>
+                              <Insets left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
                         </JFXComboBox>
+                        <JFXComboBox fx:id="jcbTipo" labelFloat="true" maxWidth="1.7976931348623157E308" promptText="Tipo" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="5.0" right="5.0" />
+                           </GridPane.margin>
+                        </JFXComboBox>
+                        <JFXTextField fx:id="jtfNombre" labelFloat="true" promptText="Nombre">
+                           <GridPane.margin>
+                              <Insets left="5.0" right="5.0" />
+                           </GridPane.margin>
+                        </JFXTextField>
+                        <JFXTextField fx:id="jtfMarca" labelFloat="true" promptText="Marca" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="5.0" right="5.0" />
+                           </GridPane.margin>
+                        </JFXTextField>
                      </children>
                   </GridPane>
                   <GridPane GridPane.rowIndex="1">
@@ -76,24 +86,27 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <JFXComboBox labelFloat="true" maxWidth="1.7976931348623157E308" promptText="Tipo">
+                        <JFXComboBox fx:id="jcbTipoingrediente" labelFloat="true" maxWidth="1.7976931348623157E308" promptText="Tipo">
                            <padding>
                               <Insets left="5.0" right="5.0" />
                            </padding>
                         </JFXComboBox>
-                        <JFXTextField labelFloat="true" promptText="Ingrediente" GridPane.columnIndex="1">
+                        <JFXTextField fx:id="jtfIngrediente" labelFloat="true" promptText="Ingrediente" GridPane.columnIndex="1">
                            <padding>
                               <Insets left="5.0" right="5.0" />
                            </padding>
+                           <GridPane.margin>
+                              <Insets bottom="5.0" />
+                           </GridPane.margin>
                         </JFXTextField>
-                        <JFXButton style="-fx-border-color: #000000; -fx-background-color: #ffffff;" text="Buscar" GridPane.columnIndex="2" />
+                        <JFXButton onAction="#updateListPrecio" prefWidth="100.0" style="-fx-border-color: #000000; -fx-background-color: #ffffff;" text="Buscar" GridPane.columnIndex="2" />
                      </children>
                   </GridPane>
                </children>
             </GridPane>
          </center>
          <top>
-            <Label text="PRECIOS DE INGREDIENTES ACTUALIZADOS" BorderPane.alignment="CENTER">
+            <Label text="INGREDIENTES" BorderPane.alignment="CENTER">
                <font>
                   <Font name="System Bold" size="27.0" />
                </font>
