--- a/src/main/resources/controllerPrecio/PrecioVer.fxml
+++ b/src/main/resources/controllerPrecio/PrecioVer.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="556.0" prefWidth="579.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllerPrecio.PrecioVerController">
+<AnchorPane id="AnchorPane" fx:id="ap" prefHeight="556.0" prefWidth="579.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllerPrecio.PrecioVerController">
    <children>
       <BorderPane layoutX="221.0" layoutY="106.0" prefHeight="554.0" prefWidth="579.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
