--- a/src/main/resources/controllerPrecio/PrecioVer.fxml
+++ b/src/main/resources/controllerPrecio/PrecioVer.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="ap" prefHeight="556.0" prefWidth="579.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllerPrecio.PrecioVerController">
+<AnchorPane id="AnchorPane" fx:id="ap" prefHeight="590.0" prefWidth="845.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllerPrecio.PrecioVerController">
    <children>
       <BorderPane layoutX="221.0" layoutY="106.0" prefHeight="554.0" prefWidth="579.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -31,9 +31,11 @@
                   <TableView fx:id="TablePrecio" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                     <columns>
                       <TableColumn fx:id="columnTipo" prefWidth="100.0" text="Tipo" />
-                      <TableColumn fx:id="columnIngrediente" prefWidth="220.0" text="Ingrediente" />
+                      <TableColumn fx:id="columnIngrediente" prefWidth="200.0" text="Ingrediente" />
                         <TableColumn fx:id="columnPrecio" prefWidth="65.0" text="Precio" />
-                        <TableColumn fx:id="columnMarca" prefWidth="90.0" text="Marca" />
+                        <TableColumn fx:id="columnUnidad" prefWidth="40.0" text="U" />
+                        <TableColumn fx:id="columnMarca" prefWidth="100.0" text="Marca" />
+                        <TableColumn fx:id="columnCaracteristica" prefWidth="225.0" text="Caracteristicas" />
                         <TableColumn fx:id="columnEstado" prefWidth="100.0" />
                     </columns>
                   </TableView>
